--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -13,15 +13,17 @@ p {
 }
 
 .header {
-  @include angle(after, false, 3deg);
+  @include angle-edge($angle: 2.5, $angle-position-y: 'bottom', $angle-position-x: 'right');
   color: #fff;
   margin: 0 0 0 0;
   border: 0;
   padding: 0;
-  background: $autodo-green;
-  height: 60vh;
-  width: 100vw;
+  display: block;
+  background: linear-gradient(to bottom, $autodo-green, darken($autodo-green, 10%));
+  height: 70vh;
+  width: 110vw;
 }
+
 
 .header-title {
   padding: 25vh 0 0 0;
@@ -33,8 +35,8 @@ p {
   font-size: 48px;
   font-weight: 800;
   font-family: 'Ubuntu', sans-serif;
-  letter-spacing: 0.2;
 }
+
 // * {
 //   margin: 0;
 //   padding: 0;
