--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -2,6 +2,10 @@
 
 $autodo-green: #4cc8a7;
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1 {
   font-size: 32px;
   font-weight: 500;
@@ -199,6 +203,55 @@ p {
   font-size: 48px;
   font-weight: 800;
   font-family: 'Ubuntu', sans-serif;
+}
+
+.section-green {
+  background: $autodo-green;
+  color: #ddd;
+}
+
+.section-gray {
+  background: rgba(#b7bfbb, 0.4);
+  color: #222;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  z-index: 3;
+  width: 100vw;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  // float: right;
+  float: inherit;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
 }
 
 // * {
