--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -1,6 +1,8 @@
 @import 'angle';
 
 $autodo-green: #4cc8a7;
+$font-dark: #333;
+$link-dark: #0094c1;
 
 html {
   scroll-behavior: smooth;
@@ -15,6 +17,7 @@ p {
   font-size: 14px;
   font-weight: 300;
 }
+
 
 .header {
   @include angle-edge($angle: 2.5, $angle-position-y: 'bottom', $angle-position-x: 'right');
@@ -115,7 +118,7 @@ p {
 /* Bigger than 550 */
 @media (min-width: 550px) {
   .section {
-    padding: 12rem 0 11rem;
+    padding: 6rem 0 5rem;
   }
   .hero {
     padding-bottom: 12rem;
@@ -151,7 +154,7 @@ p {
     font-size: 2.6rem;
   }
   .section {
-    padding: 14rem 0 15rem;
+    padding: 8rem 0 7rem;
   }
   .hero {
     padding: 16rem 0 14rem;
@@ -178,7 +181,7 @@ p {
 /* Bigger than 1000 */
 @media (min-width: 1000px) {
   .section {
-    padding: 20rem 0 19rem;
+    padding: 10rem 0 9rem;
   }
   .hero {
     padding: 22rem 0;
@@ -268,6 +271,24 @@ p {
   padding: 1rem;
 }
 
+#download {
+  font-size: 0; // this is needed to remove the space after 
+                // the divider
+  svg {
+    bottom: 0;
+    width: 100%;
+    height: 10vw;
+    /* set height to pixels if you want angle to change with screen width */
+  }
+}
+
+#contact {
+  color: $font-dark;
+  padding: 1rem 0 3rem;
+  a {
+    color: $link-dark;
+  }
+}
 // * {
 //   margin: 0;
 //   padding: 0;
