--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -18,6 +18,10 @@ p {
   font-weight: 300;
 }
 
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
 
 .header {
   @include angle-edge($angle: 2.5, $angle-position-y: 'bottom', $angle-position-x: 'right');
