--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -4,6 +4,7 @@ $autodo-green: #4cc8a7;
 $font-dark: #333;
 $link-dark: #0094c1;
 $light-background: #eee;
+$font-light: #eee;
 
 html {
   scroll-behavior: smooth;
@@ -26,7 +27,7 @@ p {
 .material-icons.md-60 { font-size: 60px; }
 
 .header {
-  @include angle-edge($angle: 2.5, $angle-position-y: 'bottom', $angle-position-x: 'right');
+  // @include angle-edge($angle: 2.5, $angle-position-y: 'bottom', $angle-position-x: 'right');
   color: #fff;
   overflow: visible;
   margin: 0 0 0 0;
@@ -34,8 +35,8 @@ p {
   padding: 0;
   display: block;
   background: linear-gradient(to bottom left, $autodo-green, darken($autodo-green, 20%));
-  height: 70vh;
-  width: 110vw;
+  // height: 70vh;
+  width: 100vw;
 }
 
 .header-content {
@@ -84,43 +85,6 @@ p {
   display: none;
 }
 
-/* Values
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.values {
-  background-image: url('../images/values-bg.jpg');
-  background-size: cover;
-  color: #fff;
-  padding-bottom: 5rem;
-}
-.value-multiplier {
-  margin-bottom: .5rem;
-  color: #11DFC7;
-}
-.value-heading {
-  margin-bottom: .3rem;
-}
-.value-description {
-  opacity: .8;
-  font-weight: 300;
-}
-
-/* Help
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.get-help {
-  border-bottom: 1px solid #ddd;
-}
-
-/* Categories
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.categories {
-  background-image: url('../images/values-bg.jpg');
-  background-size: cover;
-  color: #fff;
-}
-.categories .section-description { 
-  margin-bottom: 4rem;
-}
-
 /* Bigger than 550 */
 @media (min-width: 550px) {
   .section {
@@ -163,7 +127,7 @@ p {
     padding: 8rem 0 7rem;
   }
   .hero {
-    padding: 16rem 0 14rem;
+    padding: 10rem 0 9rem;
   }
   .section-description {
     max-width: 60%;
@@ -190,18 +154,18 @@ p {
     padding: 10rem 0 9rem;
   }
   .hero {
-    padding: 22rem 0;
+    padding: 16rem 8rem 15rem;
   }
   .hero-heading {
     font-size: 3.0rem;
   }
   .phone {
-    top: -16rem;
-    max-height: 615px;
+    top: -10rem;
+    max-height: 500px;
   }
   .phone + .phone {
-    top: -14rem;
-    max-height: 570px;
+    top: -12rem;
+    max-height: 470px;
   }
 }
 
@@ -225,12 +189,12 @@ p {
 
 .section-green {
   background: $autodo-green;
-  color: #ddd;
+  color: $font-light;
 }
 
 .section-gray {
   background: rgba(#b7bfbb, 0.4);
-  color: #222;
+  color: $font-dark;
 }
 
 /* Add a black background color to the top navigation */
@@ -238,15 +202,14 @@ p {
   background-color: #333;
   overflow: hidden;
   position: fixed;
-  z-index: 3;
+  z-index: 4;
   width: 100vw;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  // float: right;
   float: inherit;
-  color: #f2f2f2;
+  color: $font-light;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -255,14 +218,14 @@ p {
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: $autodo-green;
+  color: $font-dark;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: $autodo-green;
+  color: $font-dark;
 }
 .left {
   float: left;
@@ -277,6 +240,16 @@ p {
   padding: 1rem;
 }
 
+#header {
+  font-size: 0; // this is needed to remove the space after 
+                // the divider
+  svg {
+    bottom: 0;
+    width: 100%;
+    height: 10vw;
+  }
+}
+
 #download {
   font-size: 0; // this is needed to remove the space after 
                 // the divider
@@ -284,7 +257,6 @@ p {
     bottom: 0;
     width: 100%;
     height: 10vw;
-    /* set height to pixels if you want angle to change with screen width */
   }
 }
 
@@ -295,294 +267,3 @@ p {
     color: $link-dark;
   }
 }
-// * {
-//   margin: 0;
-//   padding: 0;
-// }
-
-// html, body {
-//   height: 100%;
-// }
-
-// body {
-//   font-size: 16px;
-//   background-color: $dark-background;
-//   color: $light-text;
-//   line-height: 24px;
-//   margin: 0;
-//   border-top: 7px solid $highlight-color;
-// }
-
-// h1, h2, h3, h4, h5, h6 {
-//   color: $light-text;
-//   font-family: "open sans", sans-serif;
-//   font-weight: 600;
-// }
-
-// h1.title {
-//   font-weight: 800;
-// }
-
-// h1 {
-//   font-size: 32px;
-//   line-height: 40px;
-// }
-
-// h2 {
-//   font-size: 24px;
-//   line-height: 30px;
-// }
-
-// h3 {
-//   font-size: 21px;
-//   line-height: 24px;
-//   margin: 1em 0;
-// }
-
-// ul {
-//   margin: 1em 0;
-//   list-style: disc;
-// }
-
-// a {
-//   color: $highlight-color;
-//   text-decoration: none;
-// }
-
-// a:hover {
-//   color: $highlight-color;
-//   text-decoration: underline;
-// }
-
-// a:visited {
-//   color: $highlight-color;
-// }
-
-// table {
-//   font-size: inherit;
-//   font: 100%;
-// }
-
-// img {
-//   display: block;
-//   margin-left: auto;
-//   margin-right: auto;
-//   max-width: 600px;
-//   max-height: 600px;
-// }
-
-// ul.posts {
-//   margin-top: 0;
-//   list-style-type: none;
-//   margin-bottom: 10px;
-// }
-
-// ul.posts li {
-//   line-height: 22px;
-//   font-size: 16px;
-//   margin-bottom: 0px;
-// }
-
-// ul.posts span {
-//   font-family: 'Lucida Console', 'Andale Mono', monospace;
-//   color: $light-text;
-//   padding-right: 5px;
-//   font-size:14px;
-// }
-
-// .meta {
-//   color: $light-text;
-//   margin: 0 0 10px 0;
-// }
-
-// .site .footer {
-//   font-size: 80%;
-//   color: $light-text;
-//   border-top: 4px solid $accent;
-//   overflow: hidden;
-// }
-
-// nav h1, nav h2 {
-//   text-align: center;
-// }
-
-// #bio {
-//   margin-top: 10px;
-//   margin-bottom: 15px;
-//   border: dotted $accent;
-//   border-width: 1px 0;
-//   padding-top: 15px;
-// }
-
-// #resume {
-//   margin-top: 10px;
-//   margin-bottom: 15px;
-//   border-bottom: dotted $accent;
-//   border-width: 1px 0;
-//   padding-bottom: 15px;
-// }
-
-// #social {
-//   margin-bottom: 10px;
-//   font-size: 13px;
-// }
-
-// #post pre {
-//   border: 1px solid $accent;
-//   background-color: $dark-background;
-//   padding: 0 .4em;
-//   margin-bottom: 20px !important;
-// }
-
-// #post ul,
-// #post ol {
-//   margin-left: 1.35em;
-// }
-
-// #post code {
-//   border: 1px solid $accent;
-//   background-color: $dark-background;
-//   font-size: 85%;
-//   padding: 0 .2em;
-// }
-
-// #post pre code {
-//   border: none;
-// }
-
-// .sidebar {
-//   padding-top: 25px;
-//   font-family: "open sans", sans-serif;
-// }
-
-// .sidebar p {
-//   font-weight: 200;
-// }
-
-// .sidebar a {
-//   font-weight: 600;
-// }
-
-// .content {
-//   font: 50 16px/22px "Ubuntu", sans-serif;
-//   font-weight: 50;
-//   line-height: 1.6;
-//   border-left: 1px solid $accent;
-//   padding-left: 40px;
-//   padding-top: 25px;
-//   min-height: 400px;
-// }
-
-// .footer {
-//   width: 100%;
-// }
-
-// .footer {
-//   font-size: 80%;
-//   color: $light-text;
-//   border-top: 4px solid $accent;
-//   overflow: hidden;
-// }
-
-// .aside {
-//   font-size: 75%;
-//   color: #666;
-// }
-
-// #home h2 {
-//   color: $highlight-color;
-// }
-
-// #logo, #gravatar {
-//   margin-top: 2rem;
-//   margin-bottom: 25px;
-// }
-
-// #logo {
-// 	width: 180px;
-//   -webkit-border-radius: 50%;
-//   -moz-border-radius: 50%;
-//   border-radius: 15%;
-// }
-
-// #gravatar {
-//   width: 180px;
-//   -webkit-border-radius: 50%;
-//   -moz-border-radius: 50%;
-//   border-radius: 50%;
-// }
-
-// #stalker {
-//   display: inline-block;
-//   height: 18px;
-//   margin-left: 5px;
-// }
-
-// #stalker a {
-//   width: 29px;
-//   overflow: hidden;
-//   float: left;
-// }
-
-// #stalker i {
-//   font-size: 28px;
-//   margin-right: 5px;
-// }
-
-// #stalker a:hover {
-//   text-decoration: none;
-//   color: $highlight-color;
-// }
-
-// i.fa-hn {
-//   font-family: "open sans", sans-serif;
-//   text-align: center;
-//   font-size: 18px !important;
-//   position: relative;
-//   color: $light-text;
-// }
-
-// .home {
-//   font-size: 24px;
-//   float: right;
-//   color: $light-text;
-// }
-
-// .home:hover {
-//   text-decoration: none;
-// }
-
-// .disclaimer p {
-//   margin-top: 5px;
-//   font-size: 11px;
-//   text-align: center;
-// }
-
-// .footnotes {
-//   font-size: 14px;
-//   font-style: italic;
-// }
-
-// .icon-overlay {
-//   font-size: 16px !important;
-//   position: relative;
-//   bottom: 27px;
-//   left: 5px;
-//   color: $light-text;
-// }
-
-// .caption {
-//   margin: 0 auto;
-//   text-align: center;
-//   font-size: smaller;
-//   padding-bottom: 10px
-// }
-
-// sup {
-//   vertical-align: super;
-//   font-size: smaller;
-// }
-
-// .highlighter-rouge {
-//   display: inline-block;
-// }
