--- a/_includes/_sass/minima/_layout.scss
+++ b/_includes/_sass/minima/_layout.scss
@@ -2,10 +2,10 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $brand-color-dark;
-  border-bottom: 1px solid $brand-color-light;
+  // border-top: 5px solid $brand-color-dark;
+  // border-bottom: 1px solid $brand-color-light;
   min-height: $spacing-unit * 1.865;
-  line-height: $base-line-height * $base-font-size * 2.25;
+  // line-height: $base-line-height * $base-font-size * 2.25;
 
   // Positioning context for the mobile navigation icon
   position: relative;
