--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -1,10 +1,4 @@
-@import 'angle';
-
-$autodo-green: #4cc8a7;
-$font-dark: #333;
-$link-dark: #0094c1;
-$light-background: #eee;
-$font-light: #eee;
+@import 'variables';
 
 html {
   scroll-behavior: smooth;
@@ -35,8 +29,7 @@ p {
   padding: 0;
   display: block;
   background: linear-gradient(to bottom left, $autodo-green, darken($autodo-green, 20%));
-  // height: 70vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .header-content {
@@ -203,7 +196,7 @@ p {
   overflow: hidden;
   position: fixed;
   z-index: 4;
-  width: 100vw;
+  width: 100%;
 }
 
 /* Style the links inside the navigation bar */
@@ -265,5 +258,15 @@ p {
   padding: 1rem 0 3rem;
   a {
     color: $link-dark;
+  }
+}
+
+#footer-transition {
+  font-size: 0; // this is needed to remove the space after 
+                // the divider
+  svg {
+    bottom: 0;
+    width: 100%;
+    height: 10vw;
   }
 }
