I have seen the light and removed the sticky header

--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -195,7 +195,7 @@ p {
 .topnav {
   background-color: #333;
   overflow: hidden;
-  position: fixed;
+  // position: fixed;
   z-index: 4;
   width: 100%;
 }
