added section linking to places for feedback on the site

--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -16,13 +16,22 @@ p {
   font-weight: 300;
 }
 
+ul {
+  font-size: 14px;
+  font-weight: 300;
+  text-align: left;
+}
+
+hr {
+  margin: 2rem;
+}
+
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-60 { font-size: 60px; }
 
 .header {
-  // @include angle-edge($angle: 2.5, $angle-position-y: 'bottom', $angle-position-x: 'right');
   color: #fff;
   overflow: visible;
   margin: 0 0 0 0;
