--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -268,6 +268,10 @@ hr {
   padding: 1rem;
 }
 
+img.appstore-link{
+  width: 140px;
+}
+
 #header {
   font-size: 0; // this is needed to remove the space after
                 // the divider
