--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -6,25 +6,69 @@ html {
   background-color: $light-background;
 }
 
+@media (min-width: 550px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 750px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 1000px) {
+  html {
+    font-size: 18px;
+  }
+}
+
 h1 {
-  font-size: 32px;
+  font-size: 2rem;
   font-weight: 500;
 }
 
 p {
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 2.5rem;
-  font-weight: 200;
+  font-weight: 400;
 }
 
 ul {
-  font-size: 14px;
+  font-size: 1rem;
+  font-weight: 300;
+  text-align: left;
+}
+
+li {
+  font-size: 1rem;
   font-weight: 300;
   text-align: left;
 }
 
 hr {
   margin: 2rem;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 1.75rem;
+  font-weight: 600;
+}
+
+h4 {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+h5 {
+  font-size: 1.25rem;
+  font-weight: 500;
 }
 
 .material-icons.md-18 { font-size: 18px; }
@@ -175,7 +219,7 @@ hr {
 
 .logo {
   color: rgba($color: #ffffff, $alpha: 0.9);
-  font-size: 64px;
+  font-size: 4rem;
   font-weight: 800;
   font-family: 'Ubuntu', sans-serif;
   padding: 0;
@@ -185,7 +229,7 @@ hr {
 
 .subtitle {
   color: rgba($color: #ffffff, $alpha: 0.9);
-  font-size: 22px;
+  font-size: 1.5rem;
   font-weight: 400;
   font-family: 'Ubuntu', sans-serif;
   display: inline;
@@ -217,7 +261,7 @@ hr {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 1rem;
 }
 
 .topnav a.download-button {
@@ -318,7 +362,7 @@ img.appstore-link{
 .emphasized {
   color: $brand-color;
   font-weight: 800;
-  font-size: 1.75rem;
+  font-size: 1.25rem;
 }
 
 .filled-circle-green {
