--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -228,6 +228,16 @@ h5 {
   display: inline;
 }
 
+h1.logo {
+  color: rgba($color: #ffffff, $alpha: 0.9);
+  font-size: 4rem;
+  font-weight: 800;
+  font-family: 'Ubuntu', sans-serif;
+  padding: 0;
+  margin: 0;
+  display: inline;
+}
+
 .subtitle {
   color: rgba($color: #ffffff, $alpha: 0.9);
   font-size: 1.5rem;
