--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,10 +2,24 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="/assets/favicon.ico">
+
   {%- seo -%}
+  <meta name="keywords" content="Car Maintenance, best car maintenance app, best car maintenance app 2020, car maintenance app ios, car maintenance app android, car service app, Car Maintenance Schedule, Keep Track of Car Maintenance, car task tracker, car maintenance reminders">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:url" content="https://autodo-app">
+  <meta name="twitter:title" content="auToDo -- Car Maintenance Made Simple">
+  <meta name="twitter:description" content="auToDo is designed to give you control over your car's maintenance. Statistics on your car and its maintenance gives you the information you need to know how your car is performing, and the ability to easily create recurring tasks means you don't have to worry about forgetting a task again.">
+  <meta name="twitter:image" content="/assets/logo.png">
+  <meta name="twitter:site" content="@autodoapp">
+  <meta name="twitter:creator" content="@autodoapp">
+
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
+    {% include google-analytics.html %}
   {%- endif -%}
 </head>
