--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,10 @@ layout: default
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {%- include head.html -%}
+  {% include head.html %}
+
+  <title>{{ page.title }}</title>
+  <meta name="description" content="{{ page.title }}"/>
 
   <body>
 
@@ -25,11 +28,11 @@ layout: default
                   • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span></span>
                 {%- endif -%}</p>
             </header>
-          
+
             <div class="post-content e-content" itemprop="articleBody">
               {{ content }}
             </div>
-          
+
             <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
           </article>
       </div>
