Closes #5 and Closes #34

--- a/_includes/_sass/variables.scss
+++ b/_includes/_sass/variables.scss
@@ -3,11 +3,11 @@
  */
 $autodo-green: #4cc8a7;
 $font-dark: #333;
-$link-dark: #0094c1;
+$link-dark: #3333ee;
 $light-background: #eee;
 $font-light: #eee;
 
-/** 
+/**
  * Minima specific
  */
 $brand-color:           darken($autodo-green, 15%) !default;
