--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -76,6 +76,11 @@ a {
   border-bottom: 2px solid $link-dark;
 }
 
+a:hover {
+  text-decoration: none;
+  border-bottom: 2px solid $font-dark;
+}
+
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
