--- a/_includes/_sass/screen.scss
+++ b/_includes/_sass/screen.scss
@@ -422,3 +422,42 @@ img.appstore-link{
   overflow: visible;
   max-width: 80%;
 }
+
+.cookie-banner {
+	position: fixed;
+  bottom: 40px;
+	left: 10%;
+  right: 10%;
+  width: 80%;
+  padding: .5rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: $light-background;
+  border-radius: 5px;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+
+  a {
+    border: none;
+    text-align: left;
+  }
+}
+
+.close {
+  margin: 0px;
+  height: 90%;
+  background-color: #777;
+  border: none;
+  color: white;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.show {
+  opacity: 1;
+}
+.hide {
+  opacity: 0;
+  transition: opacity 400ms;
+}
