--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="/assets/favicon.ico">
+  <link rel="icon" sizes="32x32" type="image/png" href="/assets/favicon-32.png">
+  <link rel="icon" sizes="144x144" type="image/png" href="/assets/favicon-144.png">
+  <link rel="icon" sizes="512x512" type="image/png" href="/assets/favicon-512.png">
 
   {%- seo -%}
   <meta name="keywords" content="Car Maintenance, best car maintenance app, best car maintenance app 2020, car maintenance app ios, car maintenance app android, car service app, Car Maintenance Schedule, Keep Track of Car Maintenance, car task tracker, car maintenance reminders">
