--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
   <meta name="twitter:site" content="@autodoapp">
   <meta name="twitter:creator" content="@autodoapp">
 
-  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+  <!-- <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}"> -->
 
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
