--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,14 +18,7 @@
   <meta name="twitter:site" content="@autodoapp">
   <meta name="twitter:creator" content="@autodoapp">
 
-  <!-- <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
-  <script type="text/javascript">
-    function showMailingPopUp() {
-        require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us4.list-manage.com","uuid":"7752bab61731f22b9456d381a","lid":"7b05f54ee4","uniqueMethods":true}) })
-        document.cookie = "MCPopupClosed=; expires=Thu, 01 Jan 1970 00:00:00 UTC";
-    };
-    document.getElementById("open-popup").onclick = function() {showMailingPopUp()};
-  </script> -->
+  <script async defer type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
 
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
