--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -604,6 +604,97 @@ nav > ul li a:active {
 	
 } 
 
+// About Devs Pictures
+
+.aboutPhotos {
+	grid-area: c;
+	display: flex;
+	flex: 0 1 auto;
+	align-content: flex-start;
+	justify-content: flex-start;
+	flex-grow: 1;
+	flex-wrap: wrap;
+	margin-top: 2em;
+	margin-bottom: 1em;
+}
+
+.aboutPhoto {
+	display: flex;
+	padding-top: 2em;
+	padding-left: 15px;
+	padding-right: 15px;
+	width: calc(100%/2);
+}
+
+@media only screen and (max-width: 992px) {
+
+	.aboutPhotos {
+		flex-grow: 1;
+		flex-direction: row;
+		flex-wrap: wrap;
+		margin-top: 11px;
+	}
+
+	.aboutPhoto {
+		display: flex;
+		padding-top: 41px;
+		padding-left: 15px;
+		padding-right: 15px;
+		width: 100%;
+	}
+
+	.aboutPhoto:nth-child(-n+2) {
+		padding-top: 41px;   
+	}
+
+	.aboutPhoto:nth-child(1) {
+		padding-top: 0px;   
+	}
+
+	.aboutPhoto:nth-child(2) {
+		padding-right: 15px;
+	}
+	
+	.aboutPhoto:nth-child(2n+1) {
+		padding-left: 15px;
+	}
+	
+}
+
+@media only screen and (max-width: 375px) {
+
+	.aboutPhotos {
+		flex-grow: 1;
+		flex-direction: row;
+		flex-wrap: wrap;
+		margin-top: 11px;
+	}
+
+	.aboutPhoto {
+		display: flex;
+		padding-top: 41px;
+		padding-left: 0px;
+		padding-right: 0px;
+		width: 100%;
+	}
+
+	.aboutPhoto:nth-child(-n+2) {
+		padding-top: 41px;   
+	}
+
+	.aboutPhoto:nth-child(1) {
+		padding-top: 0px;   
+	}
+
+	.aboutPhoto:nth-child(2n) {
+		padding-right: 0px;
+	}
+	
+	.aboutPhoto:nth-child(2n+1) {
+		padding-left: 0px;
+	}
+	
+} 
 
 
 // Footer
