--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,4 +1,5 @@
 $header-height: 90px;
+$autodo-green: #4cc8a7;
 
 .imageWrapper {					// Sets the background image in the header area
 	height: 714px;
@@ -778,3 +779,10 @@ footer {
 .hidden {
 	display: none;
 }
+
+.filled-circle-green {
+	padding: 4px 12px;
+	margin: 1rem;
+	border-radius: 100%;
+	background-color: $autodo-green;
+  }
