--- a/_includes/appstoreimages.html
+++ b/_includes/appstoreimages.html
@@ -39,7 +39,7 @@ $(function() {
             // Set app name using the iOS app ID if it is not set manually in _config.yml
             var $appName = $(".appName");
             var $headerName = $(".headerName");
-            if ($.trim($($appName).text()).length == 0) {
+            if (($.trim($($appName).text()).length == 0) && ($.trim($($headerName).text()).length == 0)) {
                 $($appName).html(appInfo.trackName);
                 $($headerName).html(appInfo.trackName);
             }
