--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,13 +9,13 @@
 				</defs>
 			</svg>
 			{% if page.url != '/' %}
-				<a href="../" target="_self"><img class="headerIcon" src="{{ site.app_icon }}"></a>
+				<a href="{{ site.url }}" target="_self"><img class="headerIcon" src="{{ site.app_icon }}"></a>
 			{% else %}
 				<img class="headerIcon" src="{{ site.app_icon }}">
 			{% endif %}
 			<div class="divider"></div>
 		</div>
-		<p class="headerName">{{ site.app_name }}</p>
+		<p class="headerName">{{ site.title }}</p>
 	</div>
 	<nav class="scroll">
 		<ul>
