--- a/_includes/blog_posts.html
+++ b/_includes/blog_posts.html
@@ -1,16 +1,10 @@
 <h1>Blog</h1>
 <div>
     {% for post in site.posts %}
-      {% assign currentdate = post.date | date: "%Y" %}
-      {% if currentdate != date %}
-        {% unless forloop.first %}</ul>{% endunless %}
-        <h3>{{ currentdate }}</h3>
-        <ul>
-        {% assign date = currentdate %}
-      {% endif %}
-      <li>
+      <h2>
         <a href="{{ post.url }}">{{ post.title }}</a>
-      </li>
-      {% if forloop.last %}</ul>{% endif %}
+      </h2>
+      {{ post.content }}
+      <br>
     {% endfor %}
 </div>
